--- a/package.json
+++ b/package.json
@@ -3,31 +3,36 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth/mongodb-adapter": "^2.0.0",
-    "@hookform/resolvers": "^3.3.2",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-toast": "^1.1.5",
-    "bcryptjs": "^2.4.3",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
-    "lucide-react": "^0.294.0",
-    "mongodb": "^6.3.0",
-    "mongoose": "^8.0.3",
-    "next": "14.0.4",
-    "next-auth": "^4.24.5",
-    "next-themes": "^0.2.1",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-hook-form": "^7.49.2",
-    "tailwind-merge": "^2.1.0",
-    "zod": "^3.22.4"
+    "@auth/mongodb-adapter": "^3.9.1",
+    "@clerk/nextjs": "^6.22.0",
+    "@hookform/resolvers": "^5.1.1",
+    "@prisma/client": "^6.9.0",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-toast": "^1.2.14",
+    "axios": "^1.10.0",
+    "bcryptjs": "^3.0.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "dom-to-image": "^2.6.0",
+    "lucide-react": "^0.515.0",
+    "mongodb": "^6.17.0",
+    "mongoose": "^8.16.0",
+    "next": "15.3.3",
+    "next-auth": "^4.24.11",
+    "next-themes": "^0.4.6",
+    "prisma": "^6.9.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.58.0",
+    "tailwind-merge": "^3.3.1",
+    "zod": "^3.25.65"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
